tests/machine/x/hs/tree_sum.error

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:111:10: error:
    Not in scope: type constructor or class ‘Aeson.FromJSON’
    NB: no module named ‘Aeson’ is imported.
    |
111 | instance Aeson.FromJSON Tree
    |          ^^^^^^^^^^^^^^


Context around line 111:
  109|   deriving (Eq, Show, Generic)
  110| 
  111| instance Aeson.FromJSON Tree
  112| 
  113| sum_tree :: () -> Int
